--- a/src/css/tabs.css
+++ b/src/css/tabs.css
@@ -2,7 +2,8 @@
  * Style sheet for jQuery tabs plug-in.
  */
 
-.tabs {
+.tabs
+{
   overflow: hidden;
   width: 100%;
   margin: 0;
@@ -10,41 +11,46 @@
   list-style: none;
 }
 
-.tabs li {
+.tabs li
+{
   float: left;
   margin: 0 -15px 0 0;
 }
 
-.tabs a {
+.tabs a
+{
   float: left;
   position: relative;
-  padding: 0 40px;
   height: 0;
-  line-height: 30px;
-  text-transform: uppercase;
+  padding: 0 40px;
+  color: #FFFFFF;
   text-decoration: none;
-  color: #fff;
+  text-transform: uppercase;
+  line-height: 30px;
   border-right: 30px solid transparent;
   border-bottom: 30px solid #3D3D3D;
   border-bottom-color: #777\9;
-  opacity: .3;
+  opacity: 0.3;
   filter: alpha(opacity=30);
 }
 
 .tabs a:hover,
-.tabs a:focus {
-  border-bottom-color: #2ac7e1;
+.tabs a:focus
+{
+  border-bottom-color: #2AC7E1;
   opacity: 1;
   filter: alpha(opacity=100);
 }
 
-.tabs a:focus {
+.tabs a:focus
+{
   outline: 0;
 }
 
-.tabs .current {
+.tabs .current
+{
   z-index: 3;
-  border-bottom-color: #3d3d3d;
+  border-bottom-color: #3D3D3D;
   opacity: 1;
   filter: alpha(opacity=100);
 }
